// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/InputLabel active false 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  position: absolute;
  left: 1rem;
  padding: 0 0rem;
  background-color: transparent;
  font-size: 1rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    This is input - check knobs
  </label>
  <div
    className="c2"
  />
</div>
`;

exports[`Storyshots @components/atoms/InputLabel active true 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  position: absolute;
  left: 0.5rem;
  padding: 0 0.5rem;
  background-color: #FFF;
  font-size: 0.75rem;
  top: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.3s ease,color 0s;
  transition: all 0.3s ease,color 0s;
  pointer-events: none;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    This is input - check knobs
  </label>
  <div
    className="c2"
  />
</div>
`;
